2011-11-10  Andreas Kling  <kling@webkit.org>

        Remove ability to call HTMLCollections in V8 bindings as well.
        <http://webkit.org/b/72045>

        Reviewed by Anders Carlsson.

        Follow the JSC bindings and remove the ability to call HTMLCollections
        in the V8 bindings (excluding HTMLAllCollection.)

        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateHeaderCustomCall):
        (GenerateImplementationCustomCall):
        * dom/NodeList.idl:
        * html/HTMLCollection.idl:

            Remove the V8CustomCall attribute as it's no longer needed.

        * bindings/v8/custom/V8HTMLCollectionCustom.cpp:
        * bindings/v8/custom/V8NodeListCustom.cpp:

2011-11-11  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: Interactive color box for gradients in CSS property values
        https://bugs.webkit.org/show_bug.cgi?id=72112

        Reviewed by Yury Semikhatsky.

        Add "background-image" to the list of color-aware properties (may contain gradient definition).

        * inspector/front-end/CSSKeywordCompletions.js:

2011-11-11  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: [chromium] list dedicated workers in case inspector opened post-worker creation.
        https://bugs.webkit.org/show_bug.cgi?id=72020

        Collect information about dedicated workers even when inspector is closed. This
        way we can list all dedicated workers if the front-end opens later.

        Reviewed by Pavel Feldman.

        Test: http/tests/inspector-enabled/dedicated-workers-list.html

        * inspector/InspectorInstrumentation.h:
        (WebCore::InspectorInstrumentation::didStartWorkerContext):
        * inspector/InspectorWorkerAgent.cpp:
        (WebCore::InspectorWorkerAgent::InspectorWorkerAgent):
        (WebCore::InspectorWorkerAgent::~InspectorWorkerAgent):
        (WebCore::InspectorWorkerAgent::setFrontend):
        (WebCore::InspectorWorkerAgent::restore):